<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gouadadopavogui.myshoppingapp.ui.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:orientation="vertical"
        android:background="#FEF0D2"
        android:paddingTop="@dimen/halfGrid"
        android:paddingBottom="@dimen/halfGrid"
        android:paddingLeft="@dimen/fullGrid"
        android:paddingRight="@dimen/fullGrid">

        <TextView
            android:id="@+id/messageViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:layout_marginBottom="5dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_new_group_id"
            android:text="@string/BTN_CREATE_NEW_GROUP"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adhere_existing_group"
            android:text="@string/BTN_ADHERE_EXISTING_GROUP"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />
    </LinearLayout>

</FrameLayout>
